--- a/package.json
+++ b/package.json
@@ -9,11 +9,10 @@
     "@koa/router": "^12.0.0",
     "config": "^3.3.8",
     "env-cmd": "^10.1.0",
+    "knex": "^2.3.0",
     "koa": "^2.13.4",
     "koa-bodyparser": "^4.3.0",
     "mysql2": "^2.3.3",
-    "sequelize": "^6.25.5",
-    "sqlite3": "^5.1.2",
     "winston": "^3.8.2"
   },
   "devDependencies": {
