--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
     "@koa/router": "^12.0.0",
     "config": "^3.3.8",
     "env-cmd": "^10.1.0",
+    "jasmine-core": "^4.5.0",
+    "karma": "^6.4.1",
+    "karma-chrome-launcher": "^3.1.1",
+    "karma-coverage": "^2.2.0",
+    "karma-jasmine": "^5.1.0",
     "knex": "^2.3.0",
     "koa": "^2.13.4",
     "koa-bodyparser": "^4.3.0",
@@ -16,9 +21,11 @@
     "winston": "^3.8.2"
   },
   "devDependencies": {
+    "jasmine": "^4.5.0",
     "nodemon": "^2.0.20"
   },
   "scripts": {
-    "start": "npx env-cmd nodemon src/index.js"
+    "start": "npx env-cmd nodemon src/index.js",
+    "test": "karma start"
   }
 }
