--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "config": "^3.3.8",
     "env-cmd": "^10.1.0",
     "jasmine-core": "^4.5.0",
+    "joi": "^17.7.0",
     "karma": "^6.4.1",
     "karma-chrome-launcher": "^3.1.1",
     "karma-coverage": "^2.2.0",
@@ -18,6 +19,9 @@
     "koa": "^2.13.4",
     "koa-bodyparser": "^4.3.0",
     "mysql2": "^2.3.3",
+    "node-emoji": "^1.11.0",
+    "serialize-error": "^8.1.0",
+    "supertest": "^6.3.1",
     "winston": "^3.8.2"
   },
   "devDependencies": {
