--- a/package.json
+++ b/package.json
@@ -8,19 +8,10 @@
   "dependencies": {
     "@koa/router": "^12.0.0",
     "axios": "^1.2.1",
-    "browserify": "^17.0.0",
     "config": "^3.3.8",
     "env-cmd": "^10.1.0",
-    "jasmine-core": "^4.5.0",
     "joi": "^17.7.0",
     "jwks-rsa": "^3.0.0",
-    "karma": "^6.4.1",
-    "karma-browserify": "^8.1.0",
-    "karma-chrome-launcher": "^3.1.1",
-    "karma-coverage": "^2.2.0",
-    "karma-jasmine": "^5.1.0",
-    "karma-jasmine-html-reporter": "^2.0.0",
-    "karma-spec-reporter": "^0.0.36",
     "knex": "^2.3.0",
     "koa": "^2.13.4",
     "koa-bodyparser": "^4.3.0",
@@ -28,17 +19,20 @@
     "mysql2": "^2.3.3",
     "node-emoji": "^1.11.0",
     "serialize-error": "^8.1.0",
-    "supertest": "^6.3.1",
-    "watchify": "^4.0.0",
+    "supertest": "^6.3.3",
     "winston": "^3.8.2"
   },
   "devDependencies": {
-    "jasmine": "^4.5.0",
+    "jest": "^29.3.1",
     "nodemon": "^2.0.20"
+  },
+  "jest": {
+    "testPathIgnorePatterns": ["src", "node_modules", "config"]
   },
   "scripts": {
     "start": "npx env-cmd nodemon src/index.js",
     "start:prod": "node src/index.js",
-    "test": "karma start"
+    "test": "npx env-cmd -f .env.test jest",
+    "test:coverage": "yarn test --coverage"
   }
 }
