--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.2.1",
     "config": "^3.3.8",
     "env-cmd": "^10.1.0",
+    "jest": "^29.0.3",
     "joi": "^17.7.0",
     "jwks-rsa": "^3.0.0",
     "knex": "^2.3.0",
@@ -23,7 +24,6 @@
     "winston": "^3.8.2"
   },
   "devDependencies": {
-    "jest": "^29.3.1",
     "nodemon": "^2.0.20"
   },
   "jest": {
@@ -33,6 +33,6 @@
     "start": "npx env-cmd nodemon src/index.js",
     "start:prod": "node src/index.js",
     "test": "npx env-cmd -f .env.test jest",
-    "test:coverage": "yarn test --coverage"
+    "test:coverage": "npx env-cmd -f .env.test jest --coverage"
   }
 }
