--- a/package.json
+++ b/package.json
@@ -27,7 +27,11 @@
     "nodemon": "^2.0.20"
   },
   "jest": {
-    "testPathIgnorePatterns": ["src", "node_modules", "config"]
+    "testPathIgnorePatterns": [
+      "src",
+      "node_modules",
+      "config"
+    ]
   },
   "scripts": {
     "start": "npx env-cmd nodemon src/index.js",
