--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "axios": "^1.2.1",
     "config": "^3.3.8",
     "env-cmd": "^10.1.0",
-    "jest": "^29.0.3",
     "joi": "^17.7.0",
     "jwks-rsa": "^3.0.0",
     "knex": "^2.3.0",
@@ -23,15 +22,18 @@
     "supertest": "^6.3.3",
     "winston": "^3.8.2"
   },
-  "devDependencies": {
-    "nodemon": "^2.0.20"
-  },
   "jest": {
     "testPathIgnorePatterns": [
       "src",
       "node_modules",
-      "config"
+      "config",
+      "/__tests__/helpers.js"
     ]
+  },
+  "devDependencies": {
+    "jest": "^29.3.1",
+    "jest-each": "^29.3.1",
+    "nodemon": "^2.0.20"
   },
   "scripts": {
     "start": "npx env-cmd nodemon src/index.js",
